tests/main_tests/ui/peel_ref_fn_ty_err.stderr
error[E0308]: mismatched types
 --> tests/main_tests/ui/peel_ref_fn_ty_err.rs:5:5
  |
4 | const fn bar(reff: &Wrapping<u8>) -> &u16 {
  |                                      ---- expected `&u16` because of return type
5 |     peel_ref(reff)
  |     ^^^^^^^^^^^^^^ expected `&u16`, found `&u8`
  |
  = note: expected reference `&u16`
             found reference `&u8`
